--- a/3DDFA/requirements.txt
+++ b/3DDFA/requirements.txt
@@ -2,6 +2,7 @@ torch>=0.4.1
 torchvision>=0.2.1
 numpy>=1.15.4
 scipy>=1.1.0
-matplotlib==3.0.2
-dlib==19.5.0 # 19.15+ version may cause conflict with pytorch, this may take several minutes
+matplotlib
+#dlib==19.5.0 # 19.15+ version may cause conflict with pytorch, this may take several minutes
+dlib==19.15.0
 opencv-python>=3.4.3.18
